--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/logo.png" alt="">
+                    <img class="logo" src="assets/img/logo/logo-preloader.png" alt="">
                 </div>
             </div>
         </div>
@@ -39,6 +40,7 @@
     <!-- Preloader Start -->
     <header>
         <!-- Header Start -->
+        
         <div class="header-area">
             <div class="main-header ">
                 <div class="header-top top-bg d-none d-lg-block">
@@ -47,19 +49,23 @@
                             <div class="col-lg-8">
                                 <div class="header-info-left">
                                     <ul>
-                                        <li>needhelp@gotrip.com</li>
-                                        <li>666 569 025077</li>
-                                        <li>broklyn street new york</li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="header-info-right f-right">
                                     <ul class="header-social">
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li> <a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                        <li><a href="https://www.tiktok.com/@happytripcol?_t=8jfvuACZgd4&_r=1">
+                                            <img src="./assets/img/icon/tik-tok.png"></a></li>
+                                        <li><a href="https://www.facebook.com/happytripcol?mibextid=ZbWKwL">
+                                            <img src="./assets/img/icon/facebook.png"></a></li>
+                                        <li><a href="https://www.instagram.com/happytripcol/">
+                                            <img src="./assets/img/icon/instagram.png"></a></li>
+                                        <li><a href="https://wa.me/c/573144397756">
+                                            <img src="./assets/img/icon/whatsapp.png"></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -71,8 +77,8 @@
                         <div class="row align-items-center">
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2 col-md-1">
-                                <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <div>
+                                    <a href="index.html"><img class="logo" src="assets/img/logo/logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10 col-md-10">
@@ -80,21 +86,21 @@
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About US</a></li>
-                                            <li><a href="packages.html">Package</a></li>
+                                            <li><a href="index.html">inicio</a></li>
+                                            <li><a href="about.html">sobre nosotros</a></li>
+                                            <li><a href="packages.html">portafolio</a></li>
                                             <li><a href="blog.html">Blog</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="single-blog.html">Blog Details</a></li>
+                                                    <li><a href="single-blog.html">Blog Detalles</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#">Pages</a>
+                                            <li><a href="#">Paginas</a>
                                                 <ul class="submenu">
-                                                    <li><a href="elements.html">Element</a></li>
+                                                    <li><a href="">Elementos</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">Contact Us</a></li>
+                                            <li><a href="contact.html">Contactanos</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -121,7 +127,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap text-center">
-                                <h2>About Us</h2>
+                                <h2>sobre nosotros</h2>
                             </div>
                         </div>
                     </div>
@@ -137,7 +143,7 @@
                         <div class="support-location-img mb-50">
                             <img src="assets/img/service/support-img.jpg" alt="">
                             <div class="support-img-cap">
-                                <span>Since 1992</span>
+                                <span>desde 1992</span>
                             </div>
                         </div>
                     </div>
@@ -145,8 +151,8 @@
                         <div class="right-caption">
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle2">
-                                <span>About Our Company</span>
-                                <h2>Somos HappyTrip <br>Ravels Support Company</h2>
+                                <span>acerca de nuestra empresa</span>
+                                <h2>Somos HappyTrip <br>empresa de soporte ravels</h2>
                             </div>
                             <div class="support-caption">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
@@ -168,7 +174,7 @@
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
-                                <a href="#" class="btn border-btn">Search</a>
+                                <a href="#" class="btn border-btn">Buscar</a>
                             </div>
                         </div>
                     </div>
@@ -186,7 +192,7 @@
                                 <span class="flaticon-tour"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>8000+ Our Local<br>Guides</h5>
+                                <h5> mas de 8000+ guias<br>locales</h5>
                             </div>
                         </div>
                     </div>
@@ -196,7 +202,7 @@
                                 <span class="flaticon-pay"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>100% Trusted Tour<br>Agency</h5>
+                                <h5>tour 100%<br>de confianza</h5>
                             </div>
                         </div>
                     </div>
@@ -206,7 +212,7 @@
                                 <span class="flaticon-experience"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>28+ Years of Travel<br>Experience</h5>
+                                <h5>mas de 28 años de experiencia<br>En viajes</h5>
                             </div>
                         </div>
                     </div>
@@ -216,7 +222,7 @@
                                 <span class="flaticon-good"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>98% Our Travelers<br>are Happy</h5>
+                                <h5> como nuestro viajero<br> regresas mas feliz</h5>
                             </div>
                         </div>
                     </div>
@@ -233,9 +239,9 @@
                             <div class="video-icon">
                                 <a class="popup-video" href="https://www.youtube.com/watch?v=1aP-TXUpNoU" tabindex="0"><i class="fas fa-play"></i></a>
                             </div>
-                            <p class="pera1">Love where you're going in the perfect time</p>
+                            <p class="pera1">adora dónde vas a tener un momento perfecto</p>
                             <p class="pera2">HappyTrip es un líder mundial en excursiones y tours ecológicos</p>
-                            <p class="pera3"> Tour Booking Platform</p>
+                            <p class="pera3"> Plataforma de reserva de tours</p>
                         </div>
                     </div>
                 </div>
@@ -254,7 +260,7 @@
                                 <div class="testimonial-caption ">
                                     <div class="testimonial-top-cap">
                                         <img src="assets/img/icon/testimonial.png" alt="">
-                                        <p>Logisti Group is a representative logistics operator providing full range of ser of customs clearance and transportation worl.</p>
+                                        <p>Logistic Group es un operador logístico representativo que ofrece una gama completa de servicios de despacho de aduanas y transporte en todo el mundo.</p>
                                     </div>
                                     <!-- founder -->
                                     <div class="testimonial-founder d-flex align-items-center justify-content-center">
@@ -262,7 +268,7 @@
                                             <img src="assets/img/testmonial/Homepage_testi.png" alt="">
                                         </div>
                                         <div class="founder-text founder-text2">
-                                            <span>Jessya Inn</span>
+                                            <span>camila Fonseca</span>
                                             <p>Co Founder</p>
                                         </div>
                                     </div>
@@ -274,7 +280,7 @@
                                 <div class="testimonial-caption ">
                                     <div class="testimonial-top-cap">
                                         <img src="assets/img/icon/testimonial.png" alt="">
-                                        <p>Logisti Group is a representative logistics operator providing full range of ser of customs clearance and transportation worl.</p>
+                                        <p>Logisti Group es un operador logístico representativo que ofrece una gama completa de servicios de despacho de aduanas y transporte en todo el mundo.</p>
                                     </div>
                                     <!-- founder -->
                                     <div class="testimonial-founder d-flex align-items-center justify-content-center">
@@ -282,7 +288,7 @@
                                             <img src="assets/img/testmonial/Homepage_testi.png" alt="">
                                         </div>
                                         <div class="founder-text founder-text2">
-                                            <span>Jessya Inn</span>
+                                            <span>camila Fonseca</span>
                                             <p>Co Founder</p>
                                         </div>
                                     </div>
@@ -306,11 +312,11 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class="footer-logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="index.html"><img class="logo" src="assets/img/logo/logo.png" alt=""></a>
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
-                                        <p>Lorem iaspsum doldfor sit amvset, consectetur adipisicing cvelit csed do eiusmod tempor incididucvccnt ut labovre.</p>
+                                        <p>happytripcolombia@gmail.com <br> 312 5550452</p>
                                     </div>
                                 </div>
                             </div>
@@ -319,12 +325,12 @@
                     <div class="col-xl-2 col-lg-3 col-md-3 col-sm-5">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Quick Links</h4>
+                                <h4>enlaces rapidos</h4>
                                 <ul>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#"> Offers & Discounts</a></li>
-                                    <li><a href="#"> Get Coupon</a></li>
-                                    <li><a href="#">  Contact Us</a></li>
+                                    <li><a href="#">acerca de</a></li>
+                                    <li><a href="#"> Ofertas y descuentos</a></li>
+                                    <li><a href="#"> obten un cupon</a></li>
+                                    <li><a href="#">  Contactanos</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -332,12 +338,12 @@
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-7">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>New Products</h4>
+                                <h4>Nuevos productos</h4>
                                 <ul>
-                                    <li><a href="#">Woman Cloth</a></li>
-                                    <li><a href="#">Fashion Accessories</a></li>
-                                    <li><a href="#"> Man Accessories</a></li>
-                                    <li><a href="#"> Rubber made Toys</a></li>
+                                    <li><a href="#">ropa de mujer</a></li>
+                                    <li><a href="#">accesoriosd de moda</a></li>
+                                    <li><a href="#"> accesorios de hombre</a></li>
+                                    <li><a href="#"> juguetes hechos de caucho</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -345,13 +351,13 @@
                     <div class="col-xl-3 col-lg-3 col-md-5 col-sm-7">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Support</h4>
+                                <h4>Soporte</h4>
                                 <ul>
-                                    <li><a href="#">Frequently Asked Questions</a></li>
-                                    <li><a href="#">Terms & Conditions</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Report a Payment Issue</a></li>
+                                    <li><a href="#">preguntas frecuentes</a></li>
+                                    <li><a href="#">Terminos y condiciones</a></li>
+                                    <li><a href="#">politica de privacidad</a></li>
+                                    <li><a href="#">politica de privacidad</a></li>
+                                    <li><a href="#">Informar de un problema de pago</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -366,7 +372,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                </script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by  <a href="https://www.linkedin.com/in/brandon-moreno-0abb86270/?trk=public-profile-join-page" target="_blank">NANO</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
