--- a/packages.html
+++ b/packages.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/logo.png" alt="">
+                    <img src="assets/img/logo/logo-preloader.png" alt="">
                 </div>
             </div>
         </div>
@@ -47,19 +48,23 @@
                             <div class="col-lg-8">
                                 <div class="header-info-left">
                                     <ul>
-                                        <li>needhelp@gotrip.com</li>
-                                        <li>666 569 025077</li>
-                                        <li>broklyn street new york</li>
+                                        <li></li>
+                                        <li></li>
+                                        <li></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="header-info-right f-right">
                                     <ul class="header-social">
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li> <a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                        <li><a href="https://www.tiktok.com/@happytripcol?_t=8jfvuACZgd4&_r=1">
+                                            <img src="./assets/img/icon/tik-tok.png"></a></li>
+                                        <li><a href="https://www.facebook.com/happytripcol?mibextid=ZbWKwL">
+                                            <img src="./assets/img/icon/facebook.png"></a></li>
+                                        <li><a href="https://www.instagram.com/happytripcol/">
+                                            <img src="./assets/img/icon/instagram.png"></a></li>
+                                        <li><a href="https://wa.me/c/573144397756">
+                                            <img src="./assets/img/icon/whatsapp.png"></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -71,8 +76,8 @@
                         <div class="row align-items-center">
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2 col-md-1">
-                                <div class="logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <div>
+                                    <a href="index.html"><img class="logo" src="assets/img/logo/logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10 col-md-10">
@@ -80,21 +85,21 @@
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="about.html">About US</a></li>
-                                            <li><a href="packages.html">Package</a></li>
+                                            <li><a href="index.html">inicio</a></li>
+                                            <li><a href="about.html">sobre nosotros</a></li>
+                                            <li><a href="packages.html">Portafolio</a></li>
                                             <li><a href="blog.html">Blog</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="single-blog.html">Blog Details</a></li>
+                                                    <li><a href="single-blog.html">Blog detalles</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#">Pages</a>
+                                            <li><a href="#">Paginas</a>
                                                 <ul class="submenu">
-                                                    <li><a href="elements.html">Element</a></li>
+                                                    <li><a href="elements.html">Elementos</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">Contact Us</a></li>
+                                            <li><a href="contact.html">Contactanos</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -120,7 +125,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="hero-cap text-center">
-                                <h2>Our Packages</h2>
+                                <h2>nuestros paquetes</h2>
                             </div>
                         </div>
                     </div>
@@ -137,7 +142,7 @@
                     <div class="col-lg-12">
                         <div class="section-tittle text-center">
                             <span>PAQUETES DE TOURS DESTACADOS</span>
-                            <h2>Lugares favoritos</h2>
+                            <h2>Lugares recomendados</h2>
                         </div>
                     </div>
                 </div>
@@ -359,12 +364,12 @@
                         <div class="single-footer-caption mb-50">
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
-                                <div class="footer-logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                <div>
+                                    <a href="index.html"><img class="logo" src="assets/img/logo/logo.png" alt=""></a>
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
-                                        <p>Lorem iaspsum doldfor sit amvset, consectetur adipisicing cvelit csed do eiusmod tempor incididucvccnt ut labovre.</p>
+                                        <p>happytripcolombia@gmail.com <br>312 5550452</p>
                                     </div>
                                 </div>
                             </div>
@@ -373,12 +378,12 @@
                     <div class="col-xl-2 col-lg-3 col-md-3 col-sm-5">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Quick Links</h4>
+                                <h4>links rapidos</h4>
                                 <ul>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#"> Offers & Discounts</a></li>
-                                    <li><a href="#"> Get Coupon</a></li>
-                                    <li><a href="#">  Contact Us</a></li>
+                                    <li><a href="#">acerca de</a></li>
+                                    <li><a href="#"> ofertas y descuentos</a></li>
+                                    <li><a href="#"> obten un cupon</a></li>
+                                    <li><a href="#">  Contactanos</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -386,12 +391,12 @@
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-7">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>New Products</h4>
+                                <h4>productos Nuevos</h4>
                                 <ul>
-                                    <li><a href="#">Woman Cloth</a></li>
-                                    <li><a href="#">Fashion Accessories</a></li>
-                                    <li><a href="#"> Man Accessories</a></li>
-                                    <li><a href="#"> Rubber made Toys</a></li>
+                                    <li><a href="#">ropa de mujer</a></li>
+                                    <li><a href="#">accesorios de moda</a></li>
+                                    <li><a href="#"> accesorios de hombre</a></li>
+                                    <li><a href="#"> juguetes hechos de caucho</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -399,13 +404,13 @@
                     <div class="col-xl-3 col-lg-3 col-md-5 col-sm-7">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Support</h4>
+                                <h4>Soporte</h4>
                                 <ul>
-                                    <li><a href="#">Frequently Asked Questions</a></li>
-                                    <li><a href="#">Terms & Conditions</a></li>
+                                    <li><a href="#">preguntas frecuentes</a></li>
+                                    <li><a href="#">Terminos y condiciones</a></li>
+                                    <li><a href="#">loitica de privacidad</a></li>
                                     <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Report a Payment Issue</a></li>
+                                    <li><a href="#">Reporta un problema de pago</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -420,7 +425,7 @@
                                 Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                </script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/brandon-moreno-0abb86270/?trk=public-profile-join-page" target="_blank">NANO</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
@@ -429,7 +434,7 @@
                         <!-- social -->
                         <div class="footer-social f-right">
                             <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/happytripcol?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
                             <a href="#"><i class="fab fa-behance"></i></a>
                             <a href="#"><i class="fas fa-globe"></i></a>
                         </div>
