--- a/single-blog.html
+++ b/single-blog.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="assets/css/nice-select.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -32,7 +33,7 @@
             <div class="preloader-inner position-relative">
                <div class="preloader-circle"></div>
                <div class="preloader-img pere-text">
-                  <img src="assets/img/logo/logo.png" alt="">
+                  <img src="assets/img/logo/logo-preloader.png" alt="">
                </div>
             </div>
       </div>
@@ -48,19 +49,23 @@
                       <div class="col-lg-8">
                           <div class="header-info-left">
                               <ul>                          
-                                  <li>needhelp@gotrip.com</li>
-                                  <li>666 569 025077</li>
-                                  <li>broklyn street new york</li>
+                                  <li></li>
+                                  <li></li>
+                                  <li></li>
                               </ul>
                           </div>
                       </div>
                       <div class="col-lg-4">
                           <div class="header-info-right f-right">
                               <ul class="header-social">    
-                                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                  <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                  <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                 <li> <a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                 <li><a href="https://www.tiktok.com/@happytripcol?_t=8jfvuACZgd4&_r=1">
+                                    <img src="./assets/img/icon/tik-tok.png"></a></li>
+                                <li><a href="https://www.facebook.com/happytripcol?mibextid=ZbWKwL">
+                                    <img src="./assets/img/icon/facebook.png"></a></li>
+                                <li><a href="https://www.instagram.com/happytripcol/">
+                                    <img src="./assets/img/icon/instagram.png"></a></li>
+                                <li><a href="https://wa.me/c/573144397756">
+                                    <img src="./assets/img/icon/whatsapp.png"></a></li>
                               </ul>
                           </div>
                       </div>
@@ -72,8 +77,8 @@
                       <div class="row align-items-center">
                           <!-- Logo -->
                           <div class="col-xl-2 col-lg-2 col-md-1">
-                              <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                              <div>
+                                <a href="index.html"><img class="logo" src="assets/img/logo/logo.png" alt=""></a>
                               </div>
                           </div>
                           <div class="col-xl-10 col-lg-10 col-md-10">
@@ -81,21 +86,21 @@
                               <div class="main-menu f-right d-none d-lg-block">
                                   <nav>               
                                       <ul id="navigation">                                                                                                                                     
-                                          <li><a href="index.html">Home</a></li>
-                                          <li><a href="about.html">About US</a></li>
-                                          <li><a href="packages.html">Package</a></li>
+                                          <li><a href="index.html">inicio</a></li>
+                                          <li><a href="about.html">sobre nosotros</a></li>
+                                          <li><a href="packages.html">portafolio</a></li>
                                           <li><a href="blog.html">Blog</a>
                                               <ul class="submenu">
                                                   <li><a href="blog.html">Blog</a></li>
-                                                  <li><a href="single-blog.html">Blog Details</a></li>
+                                                  <li><a href="single-blog.html">Blog Detalles</a></li>
                                               </ul>
                                           </li>
-                                          <li><a href="#">Pages</a>
+                                          <li><a href="#">Paginas</a>
                                               <ul class="submenu">
-                                                  <li><a href="elements.html">Element</a></li>
+                                                  <li><a href="elements.html">Elementos</a></li>
                                               </ul>
                                           </li>
-                                          <li><a href="contact.html">Contact Us</a></li>
+                                          <li><a href="contact.html">Contactanos</a></li>
                                       </ul>
                                   </nav>
                               </div>
@@ -119,7 +124,7 @@
               <div class="row">
                   <div class="col-xl-12">
                       <div class="hero-cap text-center">
-                          <h2>Single Blog</h2>
+                          <h2>blog solo</h2>
                       </div>
                   </div>
               </div>
@@ -205,7 +210,7 @@
                               </a>
                            </div>
                            <div class="detials">
-                              <p>Prev Post</p>
+                              <p>Pre Post</p>
                               <a href="#">
                                  <h4>Space The Final Frontier</h4>
                               </a>
@@ -372,77 +377,77 @@
                            </div>
                         </div>
                         <button class="button rounded-0 primary-bg text-white w-100 btn_1 boxed-btn"
-                           type="submit">Search</button>
+                           type="submit">buscar</button>
                      </form>
                   </aside>
                   <aside class="single_sidebar_widget post_category_widget">
-                     <h4 class="widget_title">Category</h4>
+                     <h4 class="widget_title">Categoria</h4>
                      <ul class="list cat-list">
                         <li>
                            <a href="#" class="d-flex">
-                              <p>Resaurant food</p>
+                              <p>restaurante de comida</p>
                               <p>(37)</p>
                            </a>
                         </li>
                         <li>
                            <a href="#" class="d-flex">
-                              <p>Travel news</p>
+                              <p>nuevos viajes</p>
                               <p>(10)</p>
                            </a>
                         </li>
                         <li>
                            <a href="#" class="d-flex">
-                              <p>Modern technology</p>
+                              <p>tecnologia moderna</p>
                               <p>(03)</p>
                            </a>
                         </li>
                         <li>
                            <a href="#" class="d-flex">
-                              <p>Product</p>
+                              <p>Producto</p>
                               <p>(11)</p>
                            </a>
                         </li>
                         <li>
                            <a href="#" class="d-flex">
-                              <p>Inspiration</p>
+                              <p>Inspiracion</p>
                               <p>(21)</p>
                            </a>
                         </li>
                         <li>
                            <a href="#" class="d-flex">
-                              <p>Health Care</p>
+                              <p>ayuda medica</p>
                               <p>(21)</p>
                            </a>
                         </li>
                      </ul>
                   </aside>
                   <aside class="single_sidebar_widget popular_post_widget">
-                     <h3 class="widget_title">Recent Post</h3>
+                     <h3 class="widget_title">Reciente Post</h3>
                      <div class="media post_item">
                         <img src="assets/img/post/post_1.png" alt="post">
                         <div class="media-body">
                            <a href="single-blog.html">
-                              <h3>From life was you fish...</h3>
+                              <h3>en otra vida fuiste pez...</h3>
                            </a>
-                           <p>January 12, 2019</p>
+                           <p>Janunio 12, 2019</p>
                         </div>
                      </div>
                      <div class="media post_item">
                         <img src="assets/img/post/post_2.png" alt="post">
                         <div class="media-body">
                            <a href="single-blog.html">
-                              <h3>The Amazing Hubble</h3>
+                              <h3>el increible hubble</h3>
                            </a>
-                           <p>02 Hours ago</p>
+                           <p>hace 2 horas</p>
                         </div>
                      </div>
                      <div class="media post_item">
                         <img src="assets/img/post/post_3.png" alt="post">
                         <div class="media-body">
                            <a href="single-blog.html">
-                              <h3>Astronomy Or Astrology</h3>
+                              <h3>Astronomia y astrologia</h3>
                            </a>
-                           <p>03 Hours ago</p>
+                           <p>hace 3 horas</p>
                         </div>
                      </div>
                      <div class="media post_item">
@@ -451,7 +456,7 @@
                            <a href="single-blog.html">
                               <h3>Asteroids telescope</h3>
                            </a>
-                           <p>01 Hours ago</p>
+                           <p>hace una hora</p>
                         </div>
                      </div>
                   </aside>
@@ -459,28 +464,28 @@
                      <h4 class="widget_title">Tag Clouds</h4>
                      <ul class="list">
                         <li>
-                           <a href="#">project</a>
+                           <a href="#">projecto</a>
                         </li>
                         <li>
-                           <a href="#">love</a>
+                           <a href="#">amor</a>
                         </li>
                         <li>
-                           <a href="#">technology</a>
+                           <a href="#">tecnologia</a>
                         </li>
                         <li>
-                           <a href="#">travel</a>
+                           <a href="#">viaje</a>
                         </li>
                         <li>
-                           <a href="#">restaurant</a>
+                           <a href="#">Restaurante</a>
                         </li>
                         <li>
-                           <a href="#">life style</a>
+                           <a href="#">estilo de vida</a>
                         </li>
                         <li>
-                           <a href="#">design</a>
+                           <a href="#">designar</a>
                         </li>
                         <li>
-                           <a href="#">illustration</a>
+                           <a href="#">ilustracion</a>
                         </li>
                      </ul>
                   </aside>
@@ -520,7 +525,7 @@
                      </ul>
                   </aside>
                   <aside class="single_sidebar_widget newsletter_widget">
-                     <h4 class="widget_title">Newsletter</h4>
+                     <h4 class="widget_title">Nuevas letras</h4>
                      <form action="#">
                         <div class="form-group">
                            <input type="email" class="form-control" onfocus="this.placeholder = ''"
@@ -547,11 +552,11 @@
                        <div class="single-footer-caption mb-30">
                             <!-- logo -->
                            <div class="footer-logo">
-                               <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                               <a href="index.html"><img class="logo" src="assets/img/logo/logo.png" alt=""></a>
                            </div>
                            <div class="footer-tittle">
                                <div class="footer-pera">
-                                   <p>Lorem iaspsum doldfor sit amvset, consectetur adipisicing cvelit csed do eiusmod tempor incididucvccnt ut labovre.</p>
+                                   <p>happytripcolombia@gmail.com <br>312 5550452</p>
                               </div>
                            </div>
                        </div>
@@ -560,12 +565,12 @@
                   <div class="col-xl-2 col-lg-3 col-md-3 col-sm-5">
                       <div class="single-footer-caption mb-50">
                           <div class="footer-tittle">
-                              <h4>Quick Links</h4>
+                              <h4>links rapidos</h4>
                               <ul>
-                                  <li><a href="#">About</a></li>
-                                  <li><a href="#"> Offers & Discounts</a></li>
-                                  <li><a href="#"> Get Coupon</a></li>
-                                  <li><a href="#">  Contact Us</a></li>
+                                  <li><a href="#">scerca <del></del></a></li>
+                                  <li><a href="#"> ofertas y descuentos</a></li>
+                                  <li><a href="#"> obten un cupon</a></li>
+                                  <li><a href="#">  Contactanos</a></li>
                               </ul>
                           </div>
                       </div>
@@ -573,12 +578,12 @@
                   <div class="col-xl-3 col-lg-3 col-md-4 col-sm-7">
                       <div class="single-footer-caption mb-50">
                           <div class="footer-tittle">
-                              <h4>New Products</h4>
+                              <h4>Nuevos productos</h4>
                               <ul>
-                                  <li><a href="#">Woman Cloth</a></li>
-                                  <li><a href="#">Fashion Accessories</a></li>
-                                  <li><a href="#"> Man Accessories</a></li>
-                                  <li><a href="#"> Rubber made Toys</a></li>
+                                  <li><a href="#">ropa de mujer</a></li>
+                                  <li><a href="#">accesorios de moda</a></li>
+                                  <li><a href="#"> accesorios de hombre</a></li>
+                                  <li><a href="#"> juguetes echos de caucho</a></li>
                               </ul>
                           </div>
                       </div>
@@ -586,13 +591,13 @@
                   <div class="col-xl-3 col-lg-3 col-md-5 col-sm-7">
                       <div class="single-footer-caption mb-50">
                           <div class="footer-tittle">
-                              <h4>Support</h4>
+                              <h4>Suporte</h4>
                               <ul>
-                               <li><a href="#">Frequently Asked Questions</a></li>
-                               <li><a href="#">Terms & Conditions</a></li>
+                               <li><a href="#">preguntas frecuentes</a></li>
+                               <li><a href="#">Terminos y condiciones</a></li>
+                               <li><a href="#">Privacy Policypolitica de privacidad</a></li>
                                <li><a href="#">Privacy Policy</a></li>
-                               <li><a href="#">Privacy Policy</a></li>
-                               <li><a href="#">Report a Payment Issue</a></li>
+                               <li><a href="#">Reporta un problema de pago</a></li>
                            </ul>
                           </div>
                       </div>
@@ -603,7 +608,7 @@
                <div class="col-xl-7 col-lg-7 col-md-7">
                   <div class="footer-copy-right">
                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/brandon-moreno-0abb86270/?trk=public-profile-join-page" target="_blank">NANO</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                   </div>
                </div>
